fix highlighting for mixed files